--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- awal navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Lley Friscilla</a>
+  <a class="navbar-brand" href="#">Lely Friscilla</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
   </button>
